menghilangkan scroll yang bablas

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8" />
+    <!-- <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    /> -->
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -28,7 +32,7 @@
     <title>Lawyers 4.0</title>
   </head>
   <body>
-    <section id="header">
+    <section class="header">
       <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
         <div class="container">
           <a class="navbar-brand huruf-khusus" href="#"
@@ -102,7 +106,7 @@
 
     <!-- info panel -->
     <!-- desktop -->
-    <section class="panel d-none d-lg-block">
+    <section class="panel d-none">
       <div class="row justify-content-center">
         <div class="col-md-8 info-panel">
           <div class="row">
@@ -224,7 +228,7 @@
       </div>
     </section>
 
-    <section class="info">
+    <section class="info d-none">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-4 mb-5" data-aos="fade-up">
