--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </div>
     </section>
 
-    <section class="info d-none">
+    <section class="info">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-4 mb-5" data-aos="fade-up">
